objects/TransactionSummaryByTerritory__c.object
<CustomObject>
    <fields>
        <fullName>AsOfDate__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BusinessDaysRest__c</fullName>
        <label>Business Days Rest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessDays__c</fullName>
        <label>Business Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>Territory__r.Channel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DailyPurchases__c</fullName>
        <label>Daily Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DailyRedemptions__c</fullName>
        <label>Daily Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IC__c</fullName>
        <formula>Territory__r.Zone5__r.FirstName + ' ' + Territory__r.Zone5__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRD__c</fullName>
        <formula>Territory__r.Zone1__r.FirstName + ' ' + Territory__r.Zone1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTDGoal__c</fullName>
        <label>MTD Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyGoal__c</fullName>
        <label>Monthly Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyPurchases__c</fullName>
        <label>Monthly Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyRedemptions__c</fullName>
        <label>Monthly Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Territory__c</fullName>
        <formula>Territory__r.ParentTerritory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COLLECTIVE TRUST</fullName>
                </value>
                <value>
                    <fullName>HEDGE FUND</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL INTL</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL US</fullName>
                </value>
                <value>
                    <fullName>MANAGED ACCOUNT</fullName>
                </value>
                <value>
                    <fullName>MANAGED ACCOUNT NON-ELIGIBLE</fullName>
                </value>
                <value>
                    <fullName>MONEY MARKET</fullName>
                </value>
                <value>
                    <fullName>MUTUAL FUND</fullName>
                </value>
                <value>
                    <fullName>MUTUAL FUND - COPY</fullName>
                </value>
                <value>
                    <fullName>MUTUAL FUND - NO FEE</fullName>
                </value>
                <value>
                    <fullName>OVERLAY</fullName>
                </value>
                <value>
                    <fullName>PRIVATE PLACEMENT</fullName>
                </value>
                <value>
                    <fullName>SERVICE</fullName>
                </value>
                <value>
                    <fullName>SUB ADVISED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TerritoryType__c</fullName>
        <formula>TEXT(Territory__r.TerritoryType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Sales To Goals</relationshipLabel>
        <relationshipName>Trade_Summaries_By_Territories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TranSumTerrId__c</fullName>
        <description>Primary Key</description>
        <externalId>true</externalId>
        <label>TranSumTerrId</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserRegion__c</fullName>
        <formula>IF( ($User.ActivityTerritoryName__c =   Territory__r.ParentTerritoryName__c  ) ||( $User.ActivityTerritoryName__c =    Territory__r.Name )  || ( $User.ActivityRegionDept__c  =   Territory__r.ParentTerritoryName__c  ) ||( $User.ActivityRegionDept__c  =    Territory__r.Name ), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK('/'&amp; Id, "View")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTDGoal__c</fullName>
        <label>YTD Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YearlyGoal__c</fullName>
        <label>Yearly Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YearlyPurchases__c</fullName>
        <label>Yearly Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YearlyRedemptions__c</fullName>
        <label>Yearly Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <description>Used for Daily Sales to Goals reports</description>
    <label>Sales To Goals</label>
    <nameField>
        <displayFormat>TT-{0000000000}</displayFormat>
        <label>Sale By Territory</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales To Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>ADU</fullName>
        <columns>Channel__c</columns>
        <columns>Territory__c</columns>
        <columns>TerritoryType__c</columns>
        <columns>NAME</columns>
        <columns>DailyPurchases__c</columns>
        <columns>DailyRedemptions__c</columns>
        <columns>MonthlyGoal__c</columns>
        <columns>MonthlyPurchases__c</columns>
        <columns>MonthlyRedemptions__c</columns>
        <columns>MTDGoal__c</columns>
        <columns>ProductType__c</columns>
        <columns>YearlyGoal__c</columns>
        <columns>YearlyPurchases__c</columns>
        <columns>YearlyRedemptions__c</columns>
        <columns>YTDGoal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Channel__c</field>
            <operation>contains</operation>
            <value>ADU</value>
        </filters>
        <label>ADU</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Parent_Territory__c</columns>
        <columns>Territory__c</columns>
        <columns>Channel__c</columns>
        <columns>ProductType__c</columns>
        <columns>DailyPurchases__c</columns>
        <columns>MonthlyPurchases__c</columns>
        <columns>MTDGoal__c</columns>
        <columns>MonthlyGoal__c</columns>
        <columns>YearlyPurchases__c</columns>
        <columns>YTDGoal__c</columns>
        <columns>YearlyGoal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FidFocusRegion</fullName>
        <columns>Parent_Territory__c</columns>
        <columns>Territory__c</columns>
        <columns>Channel__c</columns>
        <columns>ProductType__c</columns>
        <columns>DailyPurchases__c</columns>
        <columns>MonthlyPurchases__c</columns>
        <columns>MTDGoal__c</columns>
        <columns>MonthlyGoal__c</columns>
        <columns>YearlyPurchases__c</columns>
        <columns>YTDGoal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Territory__c</field>
            <operation>equals</operation>
            <value>FID FOCUS REGION</value>
        </filters>
        <filters>
            <field>YearlyPurchases__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Fid Focus Region</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>ManagedAccount</fullName>
        <columns>Parent_Territory__c</columns>
        <columns>Territory__c</columns>
        <columns>DailyPurchases__c</columns>
        <columns>MonthlyPurchases__c</columns>
        <columns>MTDGoal__c</columns>
        <columns>MonthlyGoal__c</columns>
        <columns>YearlyPurchases__c</columns>
        <columns>YTDGoal__c</columns>
        <columns>YearlyGoal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>YearlyGoal__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ProductType__c</field>
            <operation>equals</operation>
            <value>MANAGED ACCOUNT</value>
        </filters>
        <label>Managed Account</label>
    </listViews>
    <listViews>
        <fullName>MutualFund</fullName>
        <columns>Parent_Territory__c</columns>
        <columns>Territory__c</columns>
        <columns>DailyPurchases__c</columns>
        <columns>MonthlyPurchases__c</columns>
        <columns>MTDGoal__c</columns>
        <columns>MonthlyGoal__c</columns>
        <columns>YearlyPurchases__c</columns>
        <columns>YTDGoal__c</columns>
        <columns>YearlyGoal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>YearlyGoal__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ProductType__c</field>
            <operation>equals</operation>
            <value>MUTUAL FUND</value>
        </filters>
        <label>Mutual Fund</label>
    </listViews>
</CustomObject>